--- a/Groepswerk 3/bucm/BUC-RO.adoc
+++ b/Groepswerk 3/bucm/BUC-RO.adoc
@@ -43,21 +43,21 @@ De *klant* wilt een zichtrekening openen
 Klant,Medewerker
 
 === Preconditie
-ID-Klant,Referentie-rekening,Loket is open.
+bankkaart,Referentie-rekening,Loket is open.
 
 
 === Basis pad
 1. De *klant* wilt een spaarrekening openen.
 2. De *klant* gaat naar het loket en vraagt voor een spaarrekening te openen.
-3. De *medewerker* vraagt voor identificatie/persoonlijke gegevens.
-4. De *medewerker* controleert de identificatie.
+3. De *medewerker* vraagt voor de bankkaart van de klant.
+4. De *medewerker* controleert de bankkaart.
 5. De *medewerker* start de procedure.
 6. De *klant* stelt zijn Referentie-rekening in.
 7. De *medewerker* controleerd alle gegevens.
 8. De *medewerker* stuurt de aanvraag door naar het hoofdbureau.
 9. De use case eindigt
 === Postconditie
-De klant krijgt een brief met de info en de bankkaart.
+De klant krijgt een brief met de info.
 
 === Alternatief A: Annuleren
 1. De *Klant* kan op elk moment beslissen om te stoppen.
@@ -75,7 +75,7 @@ Niks gewijzigd
 === Postconditie
 Niks gewijzigd
 
-=== Alternatief C: ongeldige ID
+=== Alternatief C: ongeldige referentie-rekening
 1. De *medewerker* stelt vast dat de referentie-rekening ongeldig is.
 2. De *medewerker* informeerd de klant.
 3. use case eindigt.
