--- a/Groepswerk 3/Vragen voor de opdrachtgever.adoc
+++ b/Groepswerk 3/Vragen voor de opdrachtgever.adoc
@@ -3,16 +3,18 @@
 = *Vragen*
 
 
-*V1 :* Kun je uw rekeninguitreksels opvragen?
+*V1 :* Is het mogelijk om meerdere zichtrekeningen te openen?
 
-*V2 :* Kan je een verzekering afsluiten?
+*V2 :* Wat als er een vals id wordt gegeven?
 
-*V3 :* Kan je een lening afsluiten?
+*V3 :* Mag je vanuit een andere bank een spaarrekening openen?
 
-*V4 :* Kun je een gepersonaliseerde bankkaart aanvragen?
+*V4 :* Zit er een leeftijdslimiet op om een spaarrekening te openen?
 
-*V5 :* Kunnen er jongerenrekeningen afgesloten worden?
+*V5 :* Kan men ook een kredietrekening aanvragen?
 
-*V6 :* Wat is het maximum aantal biljeten dat de klant kan storten via de automaat?
+*V6 :* Is er een maximum krediet op de zichtrekening?
 
-*V7 :* Hoeveel euro kan er afgehaald worden via de automaat?
+*V7 :* Kan men een rekening openen voor een kind?
+
+*V8 :* Kunnen mensen uit het buitenland een rekening openen?
