--- a/Groepswerk 3/Verslag groep C03.adoc
+++ b/Groepswerk 3/Verslag groep C03.adoc
@@ -4,11 +4,13 @@
 De groep heeft in roterende wijs elk een opdracht uit getypt tijdens. Ook heeft iedereen evenveel input gegeve over de antwoorde die er moesten getypt worden
 
 
+== *Tijd Gewerkt*
+8:30 - 13:00 28/10/2021
 == *Jason*
-De student heeft BUC-GA getypt en heeft vocale input gegeve tijdens de andere opdrachten
+De student heeft vragen getypt en heeft vocale input gegeve tijdens de andere opdrachten
 
 == *Jonas*
-De student heeft BUC-GS getypt en heeft vocale input gegeven tijdens de andere opdrachten
+De student was wettigt afwezig op 28/10.
 
 == *Jarne*
-De Student heeft Domeinregels,BUCM titels en vragen voor de opdrachtgever getypt (dit wegens de grote van de BUC leek ons dit gelijk aan wat er getypt werd per BUC) en heeft vocale input gegeven tijdens de andere opdrachten
+De student heeft BUC-RO getypt en heeft vocale input gegeven tijdens de andere opdrachten.
