Update Verslag groep C03.adoc

--- a/Groepswerk 3/Verslag groep C03.adoc
+++ b/Groepswerk 3/Verslag groep C03.adoc
@@ -10,7 +10,7 @@ De groep heeft in roterende wijs elk een opdracht uit getypt tijdens. Ook heeft 
 De student heeft vragen getypt en heeft vocale input gegeve tijdens de andere opdrachten
 
 == *Jonas*
-De student was wettigt afwezig op 28/10.
+De student heeft de scenario's geschreven. En was wettig afwezig op 28/10 vanaf 11u10.
 
 == *Jarne*
 De student heeft BUC-RO getypt en heeft vocale input gegeven tijdens de andere opdrachten.
