--- a/Groepswerk 1/bucm/domeinregels.adoc
+++ b/Groepswerk 1/bucm/domeinregels.adoc
@@ -2,7 +2,7 @@
 
 == *Domeinregels met betrekking tot stortingen*
 
-=== DR_S - Storting is correct
+=== DR_SB - Storting is correct
 De storting is correct indien het geld niet beschadigd is en het de correcte valuta is.
 
 === DR_SVG - Storting vals geld
@@ -11,18 +11,7 @@ Indien er vals geld wordt gestord zal de bank dit in beslag nemen en wordt het b
 === DR_SC - Stortingscontrole
 Elke storting wordt gecontroleerd op vreemde objecten.
 
-=== DR_P - Pincode
-Een pincode kan max 3 maal verkeerd ingegeven worden. na dit zal de bankkaard geblokkeerd worden
-
 == *Domeinregels met betrekking tot opvraging*
 
 === DR_OS - Opvragen saldo
 Een opvraging kan pas gebeuren indien het saldo toerijkbaar is
-
-=== DR_P - Pincode
-Een pincode kan max 3 maal verkeerd ingegeven worden. na dit zal de bankkaard geblokkeerd worden
-
-== *Domeinregels met betrekking tot rekening openen*
-
-=== DR_I - Identificatie
-een id-kaart moet voldoen aan nationale richtlijnen
