--- a/Groepswerk 4/bucm/BUC-GS.adoc
+++ b/Groepswerk 4/bucm/BUC-GS.adoc
@@ -120,3 +120,65 @@ Het vals geld wordt gecontroleerd door de nationale bank.
 1. De *medewerker* merkt dat er objecten aanwezig zijn.
 2. De *medewerker* verwijdert de vreemde objecten.
 3. De use case gaat verder in stap 3 van het basispad.
+
+
+
+== Representatieve scenario’s
+
+=== Geld Storten - automaat
+
+==== SC-GS-A001 - Succesvol Geld Storten
+
+[underline]#Klant# Maarten Berkhof wenst geld te storten aan de automaat. Maarten steekt zijn bankkaart in de automaat en voert vervolgens zijn pincode in.
+Hij maakt kenbaar aan de automaat dat hij geld wilt storten op zijn rekening door in het menu 'Geld storten' te kiezen.
+
+De automaat vraagt aan Maarten om het briefgeld in de gleuf van de automaat te steken. Maarten steekt 2 biljetten van 50 EUR in de automaat en drukt op 'OK'.
+De automaat controleerd of de biljetten Euro biljetten zijn en of het geen vals geld is.
+Hierna telt de automaat het geld en toont op het scherm dat het te storten bedrag 100 EUR bedraagt.
+Vervolgens vraagt de automaat aan Maarten om te bevestigen dat dit bedrag klopt, Maarten drukt op 'ja'.
+
+De automaat voegt het bedrag toe aan de rekening van Maarten en print een stortingsbewijs af.
+De automaat keert terug naar het hoofdmenu. Maarten drukt op 'stop' en de automaat geeft zijn kaart terug.
+
+*De use case eindigt*.
+
+
+==== SC-GS-A002 - Andere Valuta
+
+[underline]#Klant# Maarten Berkhof wenst geld te storten aan de automaat. Maarten steekt zijn bankkaart in de automaat en voert vervolgens zijn pincode in.
+Hij maakt kenbaar aan de automaat dat hij geld wilt storten op zijn rekening door in het menu 'Geld storten' te kiezen.
+
+De automaat vraagt aan Maarten om het briefgeld in de gleuf van de automaat te steken. Maarten steekt 2 biljetten in de automaat en drukt op 'OK'.
+Vervolgens controleerd de automaat of de biljetten Euro biljetten zijn en of het geen vals geld is.
+De automaat merkt op dat de biljetten geen Euro biljetten zijn en geeft het geld terug aan Maarten.
+
+De automaat keert terug naar het hoofdmenu. Maarten drukt op 'stop' en de automaat geeft zijn kaart terug.
+
+*De use case eindigt*.
+
+
+=== Geld Storten - loket
+
+==== SC-GS-A001 - Succesvol Geld Storten
+
+[underline]#Klant# Maarten Berkhof wenst geld te storten aan het loket. Maarten geeft zijn bankkaart samen met het geld aan de [underline]#loketmedewerker (LMW)# en
+maakt kenbaar dat hij geld wilt storten.
+
+De LMW telt het geld en geeft een papier aan Maarten die hij moet ondertekenen om het gestorte bedrag te bevestigen.
+Maarten ondertekend het papier en vervolgens zet de LMW het bedrag op zijn rekening.
+
+Maarten krijgt zijn bankkaart terug samen met het stortingsbewijs.
+
+*De use case eindigt*.
+
+==== SC-GS-A002 - Andere Valuta
+
+[underline]#Klant# Maarten Berkhof wenst geld te storten aan het loket. Maarten geeft zijn bankkaart samen met het geld aan de [underline]#loketmedewerker (LMW)# en
+maakt kenbaar dat hij geld wilt storten.
+
+De LMW merkt op dat het geld geen Euro valuta is.
+De LMW zegt tegen Maarten dat de bank geen andere valuta's accepteerd.
+
+Maarten krijgt het geld en zijn bankkaart terug.
+
+*De use case eindigt*.
